--- a/scormxblock/static/html/studio.html
+++ b/scormxblock/static/html/studio.html
@@ -55,6 +55,12 @@
       </div>
       <span class="tip setting-help">{% trans field_height.help %}</span>
     </li>
+    <li class="field comp-setting-entry is-set">
+      <div class="wrapper-comp-setting">
+        <label class="label setting-label" for="id">{% trans "ID de la Ubicación del componente" %}</label>
+        <span class="setting-text">{{ scorm_xblock.location }}</span>
+      </div>
+    </li>
 
   </ul>
   <div class="xblock-actions">
